Update endpoint resolver generation